--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <div class="calculator">
     <div class="display">0</div>
     <div class="buttons">
-      <button class="btn operator" type="button" value="ac">AC</button>
-      <button class="btn operator" type="button" value="+/-">+/-</button>
-      <button class="btn operator" type="button" value="%">%</button>
-      <button class="btn operator " type="button" value="/">÷</button>
+      <button class="btn operator ripple" type="button" value="ac">AC</button>
+      <button class="btn operator ripple" type="button" value="+/-">+/-</button>
+      <button class="btn operator ripple" type="button" value="%">%</button>
+      <button class="btn operator ripple" type="button" value="/">÷</button>
       <button class="btn number ripple" type="button" value="7">7</button>
       <button class="btn number ripple" type="button" value="8">8</button>
       <button class="btn number ripple" type="button" value="9">9</button>
-      <button class="btn operator " type="button" value="*">x</button>
+      <button class="btn operator ripple " type="button" value="*">x</button>
       <button class="btn number ripple"  type="button" value="4">4</button>
       <button class="btn number ripple" type="button" value="5">5</button>
       <button class="btn number ripple" type="button" value="6">6</button>
